# vgi-search

./: CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  search_worker.py  serve.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
scripts/: mock_worker.py
test/sql/: answer.test  errors.test  providers.test  web_search.test
tests/: harness.py  mock_server.py  test_live.py  test_mock_e2e.py  test_parsers.py  test_registry.py  test_scalars.py  test_tables.py
tests/fixtures/: brave.json  ddg.json  exa.json  searxng.json  serpapi.json  serper.json  tavily.json
vgi_search/: __init__.py  meta.py  result.py  scalars.py  schema_utils.py  secrets.py  tables.py
vgi_search/providers/: __init__.py  _dates.py  base.py  brave.py  ddg.py  exa.py  searxng.py  serpapi.py  serper.py  tavily.py
