[project]
name = "vgi-search"
version = "0.1.0"
description = "Unified web search as VGI DuckDB SQL functions, behind one pluggable provider surface (for RAG / retrieval)"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
keywords = [
    "vgi",
    "duckdb",
    "web-search",
    "search",
    "rag",
    "retrieval",
    "brave",
    "tavily",
    "exa",
    "searxng",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "vgi-python>=0.8.3",
    "httpx>=0.27",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://query.farm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: hits a real provider over the network (DDG Instant Answer, no key); gated, not in CI",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The PEP 723 inline-script headers wrap dependency pins that should stay one-per-line.
"search_worker.py" = ["E501"]
"serve.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
